# pdb-data-cruncher

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  example_cronjob.yaml  example_deployment.yaml  example_job.yaml  local.env  pyproject.toml  readme.md  user_guide.md
src/: config.py  constants.py  exception.py  main.py  manager.py  utils.py
src/classes/: __init__.py
src/data_archivation/: data_archivation_manager.py  seven_zip_archive_creator.py
src/data_download/: __init__.py  data_download_manager.py  failing_ids_handler.py  http_download.py  http_request_handler.py  ids_to_download_loader.py  ligand_ccd_handler.py  rest_download.py  rsync_handler.py
src/data_extraction/: crunched_data_csv_handler.py  crunched_data_csv_writer.py  data_extraction_manager.py  inferred_protein_data_calculator.py  json_file_loader.py  ligand_occurance_handler.py  ligand_stats_parser.py  parsing_manger.py  pdb_ids_finder.py  pdb_ids_to_update_finder.py  pdbx_parser.py  rest_parser.py  validator_db_result_parser.py  xml_validation_report_parser.py
src/data_loaders/: __init__.py  json_file_loader.py  ligand_stats_loader.py
src/data_parsers/: ligand_stats_parser.py  pdb_parser.py  pdbx_parser.py  rest_parser.py  xml_parser.py  xml_validation_report_parser.py
src/data_processing/: inferred_protein_data_calculator.py
src/data_transformation/: data_transform_manager.py  default_plot_data_creator.py  default_plot_settings_creator.py  distribution_data_creator.py  factor_hierarchy_updater.py  versions_updater.py
src/file_handlers/: autoplot_csv_loader.py  crunched_data_csv_writer.py  csv_reader.py  default_plot_data_file_writer.py  default_plot_settings_file_writer.py  distribuion_data_file_writer.py  distribution_data_file_writer.py  factor_hierarchy_file_writer.py  file_copier.py  generic_csv_loader.py  json_file_writer.py  name_translations_loader.py  versions_file_writer.py
src/generic_file_handlers/: csv_handler.py  csv_reader.py  json_file_loader.py  json_file_writer.py  plain_file_handler.py  plain_text_loader.py  rsync_log_loader.py  simple_lock_handler.py
src/models/: __init__.py  constants.py  diagnostics.py  extraction_attribute_names.py  factor_type.py  ids_to_update.py  ligand_info.py  ligand_stats.py  names_csv_output_attributes.py  protein_data_complete.py  protein_data_from_pdb.py  protein_data_from_pdbx.py  protein_data_from_rest.py  protein_data_from_vdb.py  protein_data_from_xml.py  protein_data_inferred.py
src/post_transformation_actions/: post_transformation_actions_manager.py
tests/: Dockerfile-tests  docker-compose.yaml  expected_results_loader.py  helpers.py  readme.md  test_constants.py  utils.py
tests/data_extraction_tests/: ligand_stats_loader_test.py  ligand_stats_parser_test.py  rest_parser_test.py
tests/data_extractors_tests/: crunched_data_csv_writer_test.py  inferred_data_calculator_test.py  ligand_stats_loader_test.py  pdbx_parser_test.py  (+3 more)
(+179 files in other folders)
