[tool.poetry]
name = "pdb-data-cruncher"
version = "0.1.0"
packages = [
    {include = "src"}
]
description = "Data collection from PDB and processing it."
authors = [
    "Iveta Strnadová <527354@muni.cz>",
]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
biopython = "^1.81"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
py7zr = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
setuptools = "^68.2.2"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.11.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
disable = ["missing-module-docstring", "duplicate-code", "too-many-instance-attributes"]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s: %(message)s (%(filename)s:%(lineno)d)"
markers = [
    "integration",
]
